--- a/src/templates/blog-post.scss
+++ b/src/templates/blog-post.scss
@@ -23,6 +23,7 @@
     padding-right: 40px;
 
     .toc-list {
+      // background: #f6f7f7;
       line-height: 1.35;
       position: fixed;
       right: 5rem;
@@ -62,6 +63,20 @@
 
   @media screen and (max-width: 1439px) {
     & .toc-list {
+      display: none;
+    }
+  }
+
+  @media (max-width: 700px) and (orientation: portrait) {
+    & .sidebar {
+      display: none;
+    }
+
+    & .content {
+      width: 90vw;
+    }
+
+    & .toc {
       display: none;
     }
   }
